@@ -15,8 +15,9 @@ pglookout 1.3.0 (2016-XX-XX)
 * `remote_conns` object's keys no longer have functional meaning.  Remote
   addresses are only read from the values of the object.
 * Show version number in pglookout --version
+* Emit a warning when running under systemd without python-systemd installed
+* Fix logging to syslog and use the same format when logging to journald
 * Drop support for Python 2.6
-* Add proper support for logging to syslog
 * Various minor bug fixes, refactoring and improved test cases
 
 pglookout 1.2.0 (2015-06-15)
